edit font and make validation for form

--- a/src/contact.module.css
+++ b/src/contact.module.css
@@ -26,3 +26,7 @@
 .success .MuiInputLabel-formControl {
   color: rgb(32, 126, 32);
 }
+
+input::placeholder {
+  font-family: "Poppins", sans-serif;
+}
