--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,1 @@
-.MuiInputBase-formControl {
-  background-color: #f3f3f3 !important;
-  border-color: #f3f3f3;
-}
-
-.Mui-focused .MuiOutlinedInput-notchedOutline {
-  border-color: #133a5e !important;
-}
-
-.MuiInputLabel-formControl.Mui-focused {
-  color: #133a5e !important;
-}
-
-.MuiInputBase-formControl.Mui-focused {
-  color: #133a5e !important;
-}
-
-.success .MuiOutlinedInput-notchedOutline {
-  border-color: rgb(32, 126, 32);
-}
-
-.success .MuiInputBase-formControl {
-  color: rgb(32, 126, 32);
-}
-
-.success .MuiInputLabel-formControl {
-  color: rgb(32, 126, 32);
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
