--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body,
 input,
 textarea,
