--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,51 @@
   html {
     font-family: Poppins, sans-serif;
   }
+
+
+  /*  .btn-secondary {
+    @apply border-secondary text-primary font-bold py-2 px-4 rounded border-2;
+  } */
 }
+
+
+@layer components {
+
+  .btn 
+  {
+    @apply transition duration-700 text-white border-2 px-10 py-1;
+  }
+
+  .btn-primary-outline {
+    @apply border-primary text-primary;
+  }
+
+  .btn-primary-outline:hover {
+    @apply bg-primary border-primary text-white;
+  }
+
+  .btn-secondary-outline {
+    @apply border-secondary text-secondary;
+  }
+  .btn-secondary-outline:hover {
+    @apply bg-secondary border-secondary;
+  }
+
+  .btn-error-outline {
+    @apply border-error text-error;
+  }
+  .btn-error-outline:hover {
+    @apply bg-error text-white border-error;
+  }
+
+
+
+}
+
+@layer layout
+{
+  .container
+  {
+    @apply max-sm:mx-[1rem] sm:mx-[2.5rem] md:mx-[3rem] lg:mx-[4rem] xl:mx-[12rem]  py-[5rem]
+  }
+} 
