--- a/src/form.css
+++ b/src/form.css
@@ -17,12 +17,12 @@ input:focus + label {
 }
 
 
-input.success {
+.form input.success {
   border-color: rgb(32, 126, 32);
   color: rgb(32, 126, 32);
 }
 
-input.success + label {
+.form input.success + label {
   color: rgb(32, 126, 32);
 }
 
