--- a/src/index.css
+++ b/src/index.css
@@ -253,3 +253,9 @@ svg#freepik_stories-delivery-address.animated #freepik--Floor--inject-13 {
     transform: translate3d(0, 0, 0);
   }
 }
+
+.hScroll {
+  overflow-y: hidden !important;
+  overflow: hidden !important;
+  overscroll-behavior: none !important;
+}
