--- a/src/index.css
+++ b/src/index.css
@@ -258,4 +258,12 @@ svg#freepik_stories-delivery-address.animated #freepik--Floor--inject-13 {
   overflow-y: hidden !important;
   overflow: hidden !important;
   overscroll-behavior: none !important;
+  max-height: max-content !important;
+}
+
+::selection 
+{
+background-color: #133a5e;
+color:#fff;
+
 }
